...
                android:layout_height="wrap_content"
                android:text="Address:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
...
                android:layout_height="wrap_content"
                android:text="Price:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
...
                android:layout_height="wrap_content"
                android:text="Filters:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
...
                android:layout_height="wrap_content"
                android:text="Description:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
...
                android:layout_height="wrap_content"
                android:text="Cancellation policy:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
...


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/cancelButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:id="@+id/editButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </LinearLayout>
...
