...
        android:textColor="#000000"
        android:textSize="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:hint="Enter Email"
        android:focusable="true"
        android:textColorHighlight="#fb00ff"
        android:textColorHint="#2945a3"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/introEditText"
...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/emailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText"
        android:textColorHint="#2945a3"
        android:hint="Password" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
...
