...
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introEditText"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/signInProgress"/>

    <EditText
        android:title="Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:hint=" Email"
        android:inputType="textEmailAddress"
        android:focusable="true"
        android:textSize="20dp"
        android:textColorHighlight="#fb00ff"
        android:textColorHint="#2945a3"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="15dp"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/emailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText"
        android:textColorHint="#2945a3"
...


    <Button
        android:title="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login"
        android:layout_marginTop="10dp"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true" />


    <Button
        android:title="Register"
...
