...
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/basics">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Step 1: Where will you be traveling?"
                        android:id="@+id/stepOne"
                        android:paddingTop="15dp"
...
                        android:ems="10"
                        android:layout_below="@+id/stepOne"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/stepOne"
                        android:layout_alignEnd="@+id/stepOne"
                        android:id="@+id/locationEditText"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:hint="Location" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/locationEditText"
...
