...
tools:context=".MainActivity">
<item
    android:id="@+id/about"
    android:title="@string/about" />
<item
    android:id="@+id/signOut"
    android:title="Sign-out"/>
    <item
        android:id="@+id/newPosting"
        android:title="New Post"/>
<item
    android:id="@+id/action_user"
    android:orderInCategory="200"
...
